# Tic-Tac-Toe-Impossible

./: CMakeLists.txt  README.md
Tic tac toe/: AI.h  CMakeLists.txt  main.cpp  table.h
