cmake_minimum_required(VERSION 3.29)
project(Tic_Tac_Toe_Impossible)

set(CMAKE_CXX_STANDARD 14)

include_directories(.idea)
include_directories("Tic tac toe")

add_executable(Tic_Tac_Toe_Impossible
    .idea/.gitignore
    .idea/editor.xml
    .idea/misc.xml
    .idea/modules.xml
    .idea/Tic-Tac-Toe-Impossible.iml
    .idea/vcs.xml
    .idea/workspace.xml
    "Tic tac toe/.idea/.gitignore"
    "Tic tac toe/.idea/editor.xml"
    "Tic tac toe/.idea/encodings.xml"
    "Tic tac toe/.idea/misc.xml"
    "Tic tac toe/.idea/modules.xml"
    "Tic tac toe/.idea/untitled.iml"
    "Tic tac toe/.idea/workspace.xml"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/query/cache-v2"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/query/cmakeFiles-v1"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/query/codemodel-v2"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/query/toolchains-v1"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/reply/cache-v2-a90a1721f0a7cf746855.json"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/reply/cmakeFiles-v1-037abfb436e1b1197874.json"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/reply/codemodel-v2-c5b71ff5da39e7a4bdf7.json"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/reply/directory-.-Debug-d0094a50bb2071803777.json"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/reply/index-2024-10-07T00-43-22-0196.json"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/reply/target-untitled-Debug-7229616bcd62950dc1e3.json"
    "Tic tac toe/cmake-build-debug/.cmake/api/v1/reply/toolchains-v1-f397d5dfd6f01732d294.json"
    "Tic tac toe/cmake-build-debug/Testing/Temporary/LastTest.log"
    "Tic tac toe/cmake-build-debug/.ninja_deps"
    "Tic tac toe/cmake-build-debug/.ninja_log"
    "Tic tac toe/cmake-build-debug/build.ninja"
    "Tic tac toe/cmake-build-debug/cmake_install.cmake"
    "Tic tac toe/cmake-build-debug/CMakeCache.txt"
    "Tic tac toe/cmake-build-debug/untitled.exe"
    "Tic tac toe/AI.h"
    "Tic tac toe/CMakeLists.txt"
    "Tic tac toe/main.cpp"
    "Tic tac toe/table.h"
    README.md)
